Stopped tabs in compare section from overflowing on tablet.

--- a/assets/built/stylish.css
+++ b/assets/built/stylish.css
@@ -3539,33 +3539,15 @@ footer li {
     margin-right: 0;
   }
 }
-@media (min-width: 768px) and (min-width: 1024px) {
-  #compare span:last-child {
-    max-width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
+@media (min-width: 768px) and (max-width: 1023px) {
+  #compare h3 {
+    font-size: 1.1em;
+    margin-right: 20px;
   }
-  #compare span:last-child:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-  #compare span:last-child > div:nth-of-type(2n+1) {
-    width: calc(50% - -5px - -5px + -2.5px + -2.5px);
-    float: left;
-    margin: 0px -5px;
-    clear: left;
-    margin-left: 0;
-  }
-  #compare span:last-child > div:nth-of-type(2n+2) {
-    width: calc(50% - -5px - -5px + -2.5px + -2.5px);
-    float: left;
-    margin: 0px -5px;
-    clear: none;
-    margin-right: 0;
+  #compare h3[data-tabs*="frameworks.tab.foundation"] {
+    margin: 0px;
   }
 }
-
 @media (max-width: 479px) {
   #compare #otherFrameworks {
     display: none;
